--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.h2.console.path=/h2-console
 
 spring.datasource.url=jdbc:h2:file:./store;AUTO_SERVER=TRUE
 spring.datasource.username=sa
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
